--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=rskitchen5
 
 spring.data.mongodb.uri=mongodb://localhost:27017/rskitchen5
+logging.level.org.springframework.security=DEBUG
